feat(ui):Improve user experience by adding reset after price calculation

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Software Development Books</title>
     <link rel="stylesheet" href="/style.css">
+	<link rel="icon" href="https://img.icons8.com/emoji/16/null/books-emoji.png">
     
 </head>
 <body>
